# TraceTree

./: .trivyignore  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/data/trees/: nmap-basics-linux.json  nmap-basics-windows.json  nmap-basics.json
backend/app/db/: __init__.py  init_db.py  migrate_json.py  models.py
backend/app/models/: tree.py
backend/app/routers/: trees.py
backend/tests/: __init__.py  test_main.py  test_trees.py
frontend/: .env.example  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/types/: tree.ts
